--- a/roles/setup/tasks/main.yml
+++ b/roles/setup/tasks/main.yml
@@ -1,44 +1,45 @@
 ---
 - name: "update apt packages."
-  Become: yes
+  become: yes
   apt:
     update_cache: yes
 
 - name: "upgrade packages"
-  Become: yes
+  become: yes
   apt:
     upgrade: yes
 
+
 - name: remove dependencies that are no longer required
-  Become: yes
+  become: yes
   apt:
     autoremove: yes
 
 - name: "install dependencies."
-  Become: yes
+  become: yes
   apt:
     name: ["nodejs", "npm"]
     state: latest
     update_cache: yes
 
 - name: "install pm2"
-  Become: yes
+  become: yes
   npm:
     name: pm2
     global: yes
     production: yes
     state: present
 
-- name: "Create web directory"
+- name: Creates directory
   file:
     path: ~/web
     state: directory
 
-- name: "Copy the index test page"
+- name: Copy index test page
   template:
     src: "files/index.js"
     dest: "~/web/index.js"
 
-- name: "Starting the web server"
+- name: Executing node
   shell: |
     pm2 start ~/web/index.js -f
