--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,21 @@
 version: 2.1
 
+orbs:
+  aws-cli: circleci/aws-cli@2.0.3
+# Orchestrate or schedule a set of jobs
+
+commands:
+   # Exercise - Rollback
+  destroy-environment:
+    steps:
+      - run:
+          name: Destroy environment
+          # ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
+          # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
+          when: on_fail
+          command: |
+            aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7}
+
 jobs:
   myjob1:
     docker:
@@ -20,29 +36,22 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file CFtemplate.yml \
-              --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
+              --stack-name myCICDStack-${CIRCLE_WORKFLOW_ID:0:5} \
               --region us-east-1
 
   smoke-test:
     docker:
       - image: alpine:latest
-    steps:
-      - run: apk add --update curl
-      - run:
-          name: smoke test
-          command: |
-            URL="https://blog.udacity.com/"
-            # Test if website exists
-            if curl -s --head ${URL} 
-            then
-              return 0
-            else
-              return 1
-            fi
-      - destroy_environment 
+     steps:
+   - run:
+       name: Test job
+       # Fail the job intentionally to simulate an error.
+       command:  return 1
+   - destroy-environment
 
 workflows:
   myWorkflow:
     jobs:
       - myjob1
       - create-infrastructure
+      - smoke-test
