--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,11 +80,44 @@ jobs:
           paths: 
             - textfile.txt 
 
+  promote_to_production:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Execute cloudfront.yml
+          command: |
+            aws cloudformation deploy \
+            --template-file cloudfront.yml \
+            --stack-name production-distro \
+            --parameter-overrides PipelineID="mybucket92-${CIRCLE_WORKFLOW_ID:0:7}" 
+
+  clean-up-old-front-end:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run: yum install -y tar gzip
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Destroy the previous production version's S3 bucket and CloudFormation stack. 
+          # Use $OldBucketID environment variable or mybucket644752792305 below.
+          # Similarly, you can create and use $OldStackID environment variable in place of production-distro 
+          command: |
+            export OldBucketID=$(cat ~/textfile.txt)
+            aws s3 rm "s3://${OldBucketID}" --recursive
+          #  aws cloudformation delete-stack --stack-name production-distro 
+          #  aws cloudformation delete-stack --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:7}
+          #  aws cloudformation delete-stack --stack-name myCICDStack-${CIRCLE_WORKFLOW_ID:0:5}
+
 workflows:
   myWorkflow:
     jobs:
+      - create-and-deploy-front-end
       - myjob1
       - create-infrastructure
       - smoke-test
-      - create-and-deploy-front-end
+      
       - get-last-deployment-id
