--- a/CFtemplate.yml
+++ b/CFtemplate.yml
@@ -7,7 +7,7 @@ Resources:
       SecurityGroups:
         - !Ref InstanceSecurityGroup
       KeyName: UdacityProjectKey
-      ImageId: 'ami-052efd3df9dad4825' # you may need to find out what instance types are available in your region - use https://cloud-images.ubuntu.com/locator/ec2/
+      ImageId: 'ami-052efd3df9dad4825' 
       InstanceType: t3.micro
   InstanceSecurityGroup:
     Type: 'AWS::EC2::SecurityGroup'
