--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ jobs:
             aws cloudformation \
             list-exports --query "Exports[?Name==\`PipelineID\`].Value" \
             --no-paginate --output text > ~/textfile.txt
-      - persist-to-workspace:
+      - persist_to_workspace:
           root: ~/
           paths: 
             - textfile.txt 
