--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ jobs:
             aws cloudformation deploy \
             --template-file bucket.yml \
             --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:7} \
-            --parameter-overrides MyBucketName="my-udaproj-bucket-${CIRCLE_WORKFLOW_ID:0:7}"
+            --parameter-overrides MyBucketName="mybucket92-${CIRCLE_WORKFLOW_ID:0:7}"
       - run: aws s3 sync . s3://my-udaproj-bucket-${CIRCLE_WORKFLOW_ID:0:7} --delete
 
   get-last-deployment-id:
